refactor: ルーム公開範囲を削除
